# 3Sem_AISD

./: CMakeLists.txt  complex.h  double.c  int.c  int.h  main.c  vector.h
LAB1/: Ring.c  Ring.h  complex.c  double.h  menu.c  menu.h  vector.c
Lab2/: ArraySequence.h  ArraySequenseTest.cpp  ArraySequenseTest.h  CMakeLists.txt  Complex.h  DynamicArray.h  DynamicArrayTests.cpp  DynamicArrayTests.h  LinkedList.h  LinkedListSequence.h  LinkedListTests.cpp  LinkedListTests.h  ListSequencetests.cpp  ListSequencetests.h  Sequence.h  TestComplex.cpp  TestComplex.h  TestVect.cpp  TestVect.h  TestVectArray.cpp  TestVectArray.h  VecrorArray.h  Vector.h  main.cpp  myexception.h
Lab3/: BinTree.hpp  CMakeLists.txt  Person.hpp  complex.h  main.cpp  test.cpp  test.h
