cmake_minimum_required(VERSION 3.21)
project(untitled7)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled7 main.cpp DynamicArray.h LinkedList.h LinkedListSequence.h Sequence.h ArraySequence.h myexception.h Vector.h Complex.h TestVect.h TestVect.cpp TestComplex.cpp TestComplex.h VecrorArray.h TestVectArray.cpp TestVectArray.h)
